# wasi_virt_layer

./: .gitignore  Cargo.toml  README.md  component.wasm  dist-workspace.toml  err.txt  example_vfs.core.single-memory.wasm.txt  example_vfs.core.wasm.txt  out.txt  output.txt  test_run.html  test_run.ts  test_threads_vfs.ts  test_wasm_opt.opt.wasm.txt  threads_vfs.core.wasm_multi.wat  threads_vfs.core.wasm_single.wat  wasip1_vfs.opt.adjusted.opt.component.wasm
.cargo/: config.toml
adapter/: Cargo.toml  wasip1_zero_layer_opt.wasm
adapter/src/: lib.rs
adapter/wit/: wasip1_zero_layer.wit
example/: Cargo.toml
example/src/: lib.rs  virtual_file_system.rs
example/wit/: hello.wit  host.wit  virtual_file_system.wit
examples/example/: Cargo.toml
examples/example/wit/: hello.wit  util.wit
examples/test_wasm/example/: Cargo.toml  test_threads.wasm.txt
examples/test_wasm/example/src/: main.rs
examples/test_wasm/test_pool_thread/: Cargo.toml
examples/test_wasm/test_threads/: Cargo.toml
examples/test_wasm/test_threads/src/: main.rs
examples/vfs/example/: Cargo.toml  README.md
examples/vfs/example/src/: lib.rs
examples/vfs/example/wit/: hello.wit
examples/vfs/no_std_vfs/: Cargo.toml
examples/vfs/no_std_vfs/src/: lib.rs
examples/vfs/no_thread_with_thread_feature_vfs/: Cargo.toml
examples/vfs/no_thread_with_thread_feature_vfs/src/: lib.rs
examples/vfs/rustc_vfs/: Cargo.toml
examples/vfs/rustc_vfs/src/: lib.rs
examples/vfs/rustc_vfs/wit/: main.wit
examples/vfs/thread_pool_vfs/: Cargo.toml
examples/vfs/thread_pool_vfs/src/: lib.rs
examples/vfs/thread_pool_vfs/wit/: main.wit
examples/vfs/threads_vfs/: Cargo.toml
examples/vfs/threads_vfs/src/: lib.ex.rs  lib.rs  lib_ex.rs
examples/vfs/threads_vfs/wit/: main.wit
test_wasm/: example_opt.txt  example_opt.wasm  output.wasm  output.wasm.txt  test_wasm_opt.wasm  wasip1_vfs.opt.adjusted.opt.component.wasm.txt  wasip1_vfs.opt.adjusted.opt.wasm.txt
test_wasm/src/: main.rs
virtual-layer/: Cargo.toml
virtual-layer-cli/: Cargo.toml  deno.json  merged.opt.adjusted.wasm.txt  merged.opt.wasm.txt  merged.wasm.txt  o.txt  output.txt  output_artifact.txt  output_one.txt  wasip1_vfs.core.wasm.txt
virtual-layer-cli/src/: abi.rs  abi_connect.rs  adjust.rs  args.rs  build.rs  building.rs  check.rs  common.rs  compile.rs  config_checker.rs  debug.rs  director.rs  down_color.rs  dwarf.rs  extract_func.rs  generator.rs  instrs.rs  is_valid.rs  lib.rs  main.rs  memory.rs  merge.rs  patch_component.rs  reset.rs  rewrite.rs  shared_global.rs  target.rs  test_run.rs  threads.rs  util.rs  wasip1_connect.rs
virtual-layer-cli/src/generator/: abi_connect.rs  check.rs  debug.rs  memory.rs  mod.rs  patch_component.rs  shared_global.rs  special_func.rs  threads.rs
virtual-layer-cli/src/test_run/: common.rs  mod.rs  thread.rs
virtual-layer-cli/tests/: integration_test.rs  utils.rs
virtual-layer/src/: __self.rs  binary_map.rs  debug.rs  lib.rs  memory.rs  shared_global.rs  utils.rs  wasip1.rs
virtual-layer/src/transporter/: mod.rs
virtual-layer/src/wasi/: env.rs  file.expand.rs  file.rs  mod.rs  process.rs  thread.rs
virtual-layer/src/wasi/file/: constant.rs  mod.rs  stdio.rs
virtual-layer/src/wasi/file/constant/: lfs.rs  lfs_impl.rs  lfs_raw.rs  vfs.rs  vfs_impl.rs
virtual-layer/src/wit/: mod.rs  virtual_file_system.rs  virtual_file_system_threads.rs
virtual-layer/wit/: core.wit  virtual_file_system.wit  virtual_file_system_threads.wit
wasi_virt_layer/: Cargo.toml
wasi_virt_layer-cli/: Cargo.toml
wasi_virt_layer-cli/src/: abi.rs  args.rs  compile.rs  config_checker.rs  down_color.rs  fallback_command.rs  instrs.rs  lib.rs  main.rs  util.rs
wasi_virt_layer-cli/src/generator/: abi_connect.rs  check.rs  memory.rs  mod.rs  patch_component.rs  shared_global.rs  special_func.rs  threads.rs
wasi_virt_layer-cli/src/test_run/: mod.rs  thread.rs
wasi_virt_layer-cli/tests/: integration_test.rs  utils.rs
wasi_virt_layer/src/: __self.rs  initializer.rs  lib.rs  memory.rs  shared_global.rs  utils.rs  wasip1.rs
wasi_virt_layer/src/transporter/: mod.rs
wasi_virt_layer/src/wasi/: env.rs  mod.rs  process.rs  thread.rs
wasi_virt_layer/src/wasi/file/: mod.rs
wasi_virt_layer/src/wasi/file/constant/: lfs_impl.rs  lfs_raw.rs  mod.rs  vfs.rs
wasi_virt_layer/src/wit/: mod.rs
wasi_virt_layer/wit/: virtual_file_system.wit  virtual_file_system_threads.wit
