[workspace]
resolver = "2"
members = [
    "virtual-layer-cli",
    "virtual-layer",
    "examples/vfs/example",
    "examples/test_wasm/example",
]
default-members = ["virtual-layer-cli"]

[workspace.package]
authors = ["oligami <nziq53@gmail.com>"]
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT/Apache-2.0"
rust-version = "1.80.0"
keywords = []
repository = ""
documentation = ""
homepage = ""
readme = "README.md"

[workspace.dependencies]
wasip1-virtual-layer = { path = "virtual-layer", default-features = false , features = ["multi_memory"] }
