[workspace]
resolver = "2"
members = [
    "wasi_virt_layer-cli",
    "wasi_virt_layer",
    "examples/vfs/example",
    "examples/test_wasm/example",
    "examples/vfs/rustc_vfs",
    "examples/test_wasm/test_threads",
    "examples/vfs/threads_vfs", "examples/test_wasm/test_pool_thread", "examples/vfs/thread_pool_vfs", "examples/vfs/no_std_vfs", "examples/vfs/no_thread_with_thread_feature_vfs",
]
default-members = ["wasi_virt_layer-cli"]

[workspace.package]
authors = ["oligami <nziq53@gmail.com>"]
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT/Apache-2.0"
rust-version = "1.89.0"
keywords = []
repository = ""
documentation = ""
homepage = ""
readme = "README.md"

[workspace.dependencies]
wasi_virt_layer = { path = "wasi_virt_layer", default-features = false }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
