[package]
name = "wasip1-virtual-layer"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc"]
multi_memory = ["alloc"]
alloc = []

[dependencies]
wit-bindgen = { version = "0.43.0", default-features = false }
wasip1 = { version = "0.11.0", default-features = false, package = "wasi" }
const_struct = "0.5.3"
const_for = "0.1.5"
paste = "1.0.15"
dashmap = "6.1.0"
heapless = "0.8.0"
zerocopy = "0.8.26"

# [dev-dependencies]
# wasi preview1 latest
# wasmtime-wasi = "17.0.3"
