[package]
name = "wasi_virt_layer-cli"
version.workspace = true
edition = "2024"
description = "CLI for the wasi_virt_layer crate"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/wasi_virt_layer-cli"
repository = "https://github.com/oligamiq/wasi_virt_layer"

[[bin]]
name = "wasi_virt_layer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
camino = "1.1.11"
cargo_metadata = "0.22.0"
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
console = "0.16.0"
env_logger = "0.11.8"
eyre = { version = "0.6.12", default-features = false }
js-component-bindgen = "1.11.0"
log = "0.4.27"
regex = "1.11.1"
serde_json = "1.0.142"
walrus = "0.23.3"
# wasmtime-environ = { version = "35.0.0", features = ["component-model"] }
wit-component = "0.236.1"
walrus-simple-interpreter = "0.2.3"
strum = { version = "0.27.2", features = ["derive"] }
toml_edit = "0.23.3"
itertools = "0.14.0"
cfg-if = "1.0.3"
compact_str = "0.9.0"
strsim = "0.11.1"

# fallback
wasm-merge-sys = { version = "0.1.0", optional = true }
wasm-opt = { version = "0.116.1", optional = true }
libc = "0.2.177"
chrono = { version = "0.4.42", default-features = false, features = [
    "libc",
    "now",
    "std",
    "winapi",
] }
gag = "1.0.0"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Security",
] }

[features]
default = ["parallel"]
parallel = ["walrus/parallel"]
fallback = ["dep:wasm-merge-sys", "dep:wasm-opt"]

[dev-dependencies]
assert_cmd = "2.0.17"
