[package]
name = "wasi_virt_layer"
version.workspace = true
edition.workspace = true
description = "A virtual layer for WASI modules"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oligamiq/wasi_virt_layer"
documentation = "https://docs.rs/wasi_virt_layer"
publish = true

[features]
default = ["std"]
alloc = []
multi_memory = ["alloc"]
std = ["alloc", "wasip1/std"]
threads = ["std", "dep:parking_lot", "dep:dashmap"]
# this is unstable
unstable_print_debug = ["std", "dep:backtrace"]

[dependencies]
wit-bindgen = { version = "0.44.0", default-features = false }
const_struct = "0.6.2"
const_for = "0.1.5"
paste = "1.0.15"
dashmap = { version = "6.1.0", optional = true }
# heapless = "0.8.0"
# zerocopy = "0.8.26"
# camino = "1.1.11"
parking_lot = { version = "0.12.4", optional = true }

backtrace = { version = "0.3.75", optional = true, default-features = false, features = [
    "std",
] }

# [dev-dependencies]
# wasi preview1 latest
# wasmtime-wasi = "17.0.3"

[target.'cfg(target_os = "wasi")'.dependencies]
wasip1 = { version = "0.11.1", default-features = false, package = "wasi" }
