[package]
name = "threads_vfs"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
wit-bindgen = "0.43.0"
const_struct = "0.6.2"
parking_lot = "0.12.3"

[dependencies.wasip1-virtual-layer]
workspace = true
# features = ["std", "threads", "unstable_print_debug"]
features = ["std", "threads"]

[lib]
crate-type = ["cdylib"]
